@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.4.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.gmail.erofeev.st.alexei.onlinemarket</groupId>
     <artifactId>spring-boot-module</artifactId>
@@ -20,6 +20,7 @@
         <spring.security.test.version>5.1.4.RELEASE</spring.security.test.version>
         <tl.springsecurity.version>3.0.4.RELEASE</tl.springsecurity.version>
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
+        <maven-surefire.version>2.18.1</maven-surefire.version>
     </properties>
 
     <dependencies>
@@ -98,11 +99,19 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire.version}</version>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <classifier>exec</classifier>
-                </configuration>
             </plugin>
         </plugins>
     </build>
